<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navigator</string>
    <string name="action_settings">Settings</string>
    <string name="select_server">Elija un servidor</string>
    <string name="search_hint">Buscar una referencia</string>
    <string name="action_search">Buscar referencia</string>    
    <string name="action_bom">BOM</string>    
    <string name="action_in_use">In Use</string>
    <string name="stock">Stock</string>
    <string name="orderpoint">P.P.</string>
    <string name="cost">Coste</string>
    <string name="hand_working">M.O.</string>
    <string name="in_production">En prod.</string>
    <string name="purchase">Comprado</string>
    <string name="in_planned_production">Prod. Planif.</string>
    <string name="consumed">Cosumido</string>
    <string name="transfer">Transfer.</string>
    <string name="sale">Venta</string>
    <string name="future_consume">En Planif.</string>
    <string name="state">Estado</string>
    <string name="income">Aportaciones</string>
    <string name="outcome">Consumos</string>
    <string name="price">Precio</string>

</resources>
